fixed radio text size and text gap for large scale

--- a/src/radio/index.css
+++ b/src/radio/index.css
@@ -62,9 +62,9 @@
 }
 
 .spectrum-Radio-label {
-  margin-left: 8px;
+  margin-left: var(--spectrum-radio-text-gap);
 
-  font-size: var(--spectrum-text-size);
+  font-size: var(--spectrum-radio-text-size);
 
   vertical-align: middle;
 
